--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,5 +1,5 @@
 cucumber.publish.quiet=true
-cucumber.execution.parallel.enabled = false
+cucumber.execution.parallel.enabled = true
 cucumber.execution.parallel.config.strategy = custom
 cucumber.execution.execution-mode.feature= concurrent
 #cucumber.execution.parallel.config.fixed.parallelism=4
