--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -2,5 +2,5 @@ cucumber.publish.quiet=true
 cucumber.execution.parallel.enabled = true
 cucumber.execution.parallel.config.strategy = custom
 cucumber.execution.execution-mode.feature= concurrent
-#cucumber.execution.parallel.config.fixed.parallelism=4
+cucumber.execution.parallel.config.fixed.parallelism=4
 cucumber.execution.parallel.config.custom.class=org.dvsa.testing.framework.parallel.CustomRunner
