fix: forks/browsers

--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,7 +1,6 @@
-cucumber.publish.quiet= true
+cucumber.publish.quiet=true
 cucumber.execution.parallel.enabled = false
-cucumber.junit-platform.naming-strategy= long 
-#cucumber.execution.parallel.config.strategy = custom
-#cucumber.execution.execution-mode.feature= same_thread
-#cucumber.execution.execution-mode.scenario=concurrent
-#cucumber.execution.parallel.config.custom.class=org.dvsa.testing.framework.parallel.CustomRunner
+cucumber.execution.parallel.config.strategy = custom
+cucumber.execution.execution-mode.feature= same_thread
+cucumber.execution.execution-mode.scenario=concurrent
+cucumber.execution.parallel.config.custom.class=org.dvsa.testing.framework.parallel.CustomRunner
