--- a/pom.xml
+++ b/pom.xml
@@ -281,8 +281,8 @@
                 <version>3.1.0</version>
                 <executions>
                     <execution>
-                        <id>automatic-retry-execution</id>
-                        <phase>integration-test</phase>
+                        <id>retry-failed-tests</id>
+                        <phase>post-integration-test</phase>
                         <goals>
                             <goal>run</goal>
                         </goals>
@@ -290,7 +290,7 @@
                             <target>
                                 <exec executable="/bin/bash" failonerror="false">
                                     <arg value="-c"/>
-                                    <arg value="echo 'Checking for test failures...'; if grep -r '&lt;failure\|&lt;error' ${project.build.directory}/surefire-reports/ 2>/dev/null; then echo 'Found test failures, extracting ALL failed feature files...'; grep -r 'file:///' ${project.build.directory}/surefire-reports/ | grep -o 'src/test/resources/[^)]*\.feature' | sort -u > ${project.build.directory}/rerun.txt; if [ -s ${project.build.directory}/rerun.txt ]; then echo 'Method 1 SUCCESS! Created rerun.txt with ALL failed features:'; cat ${project.build.directory}/rerun.txt; else echo 'Method 1 failed, using fallback'; echo 'src/test/resources/org/dvsa/testing/framework/features/SelfServe/Licence-Application/Gov-sign-in/application-sign-digitally.feature' > ${project.build.directory}/rerun.txt; fi; mvn test -Pretry-failed -Denv='${env}' -Dbrowser='${browser}' -Dmaven.test.failure.ignore=true; rm -f ${project.build.directory}/rerun.txt; else echo 'No test failures detected'; fi"/>
+                                    <arg value="echo 'Checking for test failures...'; if grep -r '&lt;failure\|&lt;error' ${project.build.directory}/surefire-reports/ 2>/dev/null; then echo 'Found test failures, extracting ALL failed feature files...'; grep -r 'file:///' ${project.build.directory}/surefire-reports/ | grep -o 'src/test/resources/[^)]*\.feature' | sort -u > ${project.build.directory}/rerun.txt; if [ -s ${project.build.directory}/rerun.txt ]; then echo 'Method 1 SUCCESS! Created rerun.txt with ALL failed features:'; cat ${project.build.directory}/rerun.txt; MAVEN_OPTS='-Dhttps.proxyHost=proxy.ci.olcs.dev-dvsacloud.uk -Dhttps.proxyPort=3128 -Dhttp.proxyHost=proxy.ci.olcs.dev-dvsacloud.uk -Dhttp.proxyPort=3128' mvn test -Pretry-failed -Denv='${env}' -Dbrowser='${browser}' -Dmaven.test.failure.ignore=true; else echo 'Method 1 failed, no features extracted'; fi; rm -f ${project.build.directory}/rerun.txt; else echo 'No test failures detected'; fi"/>
                                 </exec>
                             </target>
                         </configuration>
