--- a/pom.xml
+++ b/pom.xml
@@ -271,10 +271,6 @@
                 </dependencies>
             </plugin>
             <!-- Automatic retry execution plugin -->
-            <!-- Automatic retry execution plugin -->
-            <!-- Automatic retry execution plugin -->
-            <!-- Automatic retry execution plugin -->
-            <!-- Automatic retry execution plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
@@ -290,7 +286,7 @@
                             <target>
                                 <exec executable="/bin/bash" failonerror="false">
                                     <arg value="-c"/>
-                                    <arg value="echo 'Checking for test failures...'; if grep -r '&lt;failure\|&lt;error' ${project.build.directory}/surefire-reports/ 2>/dev/null; then echo 'Found test failures, extracting ALL failed feature files...'; grep -r 'file:///' ${project.build.directory}/surefire-reports/ | grep -o 'src/test/resources/[^)]*\.feature' | sort -u > ${project.build.directory}/rerun.txt; if [ -s ${project.build.directory}/rerun.txt ]; then echo 'Method 1 SUCCESS! Created rerun.txt with ALL failed features:'; cat ${project.build.directory}/rerun.txt; MAVEN_OPTS='-Dhttps.proxyHost=proxy.ci.olcs.dev-dvsacloud.uk -Dhttps.proxyPort=3128 -Dhttp.proxyHost=proxy.ci.olcs.dev-dvsacloud.uk -Dhttp.proxyPort=3128' mvn test -Pretry-failed -Denv='${env}' -Dbrowser='${browser}' -Dmaven.test.failure.ignore=true; else echo 'Method 1 failed, no features extracted'; fi; rm -f ${project.build.directory}/rerun.txt; else echo 'No test failures detected'; fi"/>
+                                    <arg value="echo 'Checking for test failures...'; if grep -r '&lt;failure\|&lt;error' ${project.build.directory}/surefire-reports/ 2>/dev/null; then echo 'Found test failures, extracting ALL failed feature files...'; grep -r 'file:///' ${project.build.directory}/surefire-reports/ | grep -o 'src/test/resources/[^)]*\.feature' | sort -u > ${project.build.directory}/rerun.txt; if [ -s ${project.build.directory}/rerun.txt ]; then echo 'Method 1 SUCCESS! Created rerun.txt with ALL failed features:'; cat ${project.build.directory}/rerun.txt; mvn test -Pretry-failed -Denv='${env}' -Dbrowser='${browser}' -Dselenium.manager.enabled=false -Dmaven.test.failure.ignore=true; else echo 'Method 1 failed, no features extracted'; fi; rm -f ${project.build.directory}/rerun.txt; else echo 'No test failures detected'; fi"/>
                                 </exec>
                             </target>
                         </configuration>
