--- a/pom.xml
+++ b/pom.xml
@@ -302,7 +302,6 @@
                 </dependencies>
             </plugin>
 
-            <!-- Automatic retry execution plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
@@ -320,6 +319,25 @@
                                     <arg value="-c"/>
                                     <arg value="echo 'Checking for test failures...'; if grep -r '&lt;failure\|&lt;error' ${project.build.directory}/surefire-reports/ 2&gt;/dev/null; then echo 'Found test failures, extracting specific failed scenarios...'; grep -r 'file:///' ${project.build.directory}/surefire-reports/ | grep -o 'src/test/resources/[^)]*\.feature' | sed 's/%20/ /g' | sort -u &gt; ${project.build.directory}/rerun.txt; if [ -s ${project.build.directory}/rerun.txt ]; then echo 'Method 1 SUCCESS! Created rerun.txt with failed features (no line numbers):'; cat ${project.build.directory}/rerun.txt; echo ''; echo 'Testing with debug - contents in quotes:'; echo '&quot;'$(cat ${project.build.directory}/rerun.txt)'&quot;'; mvn integration-test -Pretry-failed -DgridURL='${gridURL}' -Denv='${env}' -Dbrowser='${browser}' -Dplatform=LINUX -DbrowserVersion=latest -Dmaven.test.failure.ignore=true; else echo 'Method 1 failed, no scenarios extracted'; fi; rm -f ${project.build.directory}/rerun.txt; else echo 'No test failures detected'; fi"/>
                                 </exec>
+                            </target>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>fix-surefire-report</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <java classname="org.dvsa.testing.framework.parallel.SurefireRetryReport" fork="true" failonerror="true">
+                                    <arg value="${project.build.directory}/surefire-reports/surefire-report.xml"/>
+                                    <arg value="${project.build.directory}/surefire-reports/rerun.txt"/>
+                                    <arg value="${project.build.directory}/surefire-reports/org.dvsa.testing.framework.parallel.ReRunFailedCucumberTests"/>
+                                    <classpath>
+                                        <pathelement location="${project.build.testOutputDirectory}"/>
+                                    </classpath>
+                                </java>
                             </target>
                         </configuration>
                     </execution>
