--- a/pom.xml
+++ b/pom.xml
@@ -335,22 +335,46 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
-                <version>${maven-antrun-plugin.version}</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
-                        <id>retry-failed-tests</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
+                        <id>rerun-and-deduplicate</id>
+                        <phase>verify</phase>
                         <configuration>
                             <target>
-                                <exec executable="/bin/bash" failonerror="false">
+                                <!-- Run your current rerun logic (do NOT delete rerun.txt here) -->
+                                <exec executable="sh">
                                     <arg value="-c"/>
-                                    <arg value="echo 'Checking for test failures...'; if grep -r '&lt;failure\|&lt;error' ${project.build.directory}/surefire-reports/ 2&gt;/dev/null; then echo 'Found test failures, extracting specific failed scenarios...'; grep -o 'file:///[^:]*\.feature:[0-9]*' ${project.build.directory}/surefire-reports/*.xml | sed 's|file://||' | sed 's|.*/src/|src/|' | sort -u &gt; ${project.build.directory}/rerun_raw.txt; java -cp ${project.build.testOutputDirectory} org.dvsa.testing.framework.parallel.RerunScenarioLineMapper ${project.build.directory}/rerun_raw.txt ${project.build.directory}/rerun.txt; if [ -s ${project.build.directory}/rerun.txt ]; then echo 'Created rerun.txt with failed scenarios (scenario start lines):'; cat ${project.build.directory}/rerun.txt; echo ''; echo 'Testing with debug - contents in quotes:'; echo '&quot;'$(cat ${project.build.directory}/rerun.txt)'&quot;'; mvn integration-test -Pretry-failed -DgridURL='${gridURL}' -Denv='${env}' -Dbrowser='${browser}' -Dplatform=LINUX -DbrowserVersion=latest -Dmaven.test.failure.ignore=true; else echo 'No failed scenarios extracted'; fi; rm -f ${project.build.directory}/rerun.txt ${project.build.directory}/rerun_raw.txt; else echo 'No test failures detected'; fi"/>
+                                    <arg value="echo 'Checking for test failures...'; if grep -r '&lt;failure\|&lt;error' ${project.build.directory}/surefire-reports/ 2&gt;/dev/null; then echo 'Found test failures, extracting specific failed scenarios...'; grep -o 'file:///[^:]*\.feature:[0-9]*' ${project.build.directory}/surefire-reports/*.xml | sed 's|file://||' | sed 's|.*/src/|src/|' | sort -u &gt; ${project.build.directory}/rerun_raw.txt; java -cp ${project.build.testOutputDirectory} org.dvsa.testing.framework.parallel.RerunScenarioLineMapper ${project.build.directory}/rerun_raw.txt ${project.build.directory}/rerun.txt; if [ -s ${project.build.directory}/rerun.txt ]; then echo 'Created rerun.txt with failed scenarios (scenario start lines):'; cat ${project.build.directory}/rerun.txt; echo ''; echo 'Testing with debug - contents in quotes:'; echo '&quot;'$(cat ${project.build.directory}/rerun.txt)'&quot;'; mvn integration-test -Pretry-failed -DgridURL='${gridURL}' -Denv='${env}' -Dbrowser='${browser}' -Dplatform=LINUX -DbrowserVersion=latest -Dmaven.test.failure.ignore=true; else echo 'No failed scenarios extracted'; fi; rm -f ${project.build.directory}/rerun_raw.txt; else echo 'No test failures detected'; fi"/>
+                                </exec>
+
+                                <!-- Always set rerun.exists to false first -->
+                                <property name="rerun.exists" value="false"/>
+                                <!-- Set property if rerun.txt exists and is not empty -->
+                                <condition property="rerun.exists" value="true">
+                                    <and>
+                                        <available file="${project.build.directory}/rerun.txt"/>
+                                        <length file="${project.build.directory}/rerun.txt" when="greater" length="0"/>
+                                    </and>
+                                </condition>
+                                <echo>Rerun file exists: ${rerun.exists}</echo>
+
+                                <!-- Conditional deduplication -->
+                                <exec executable="sh">
+                                    <arg value="-c"/>
+                                    <arg value="if [ &quot;${rerun.exists}&quot; = &quot;true&quot; ]; then echo 'Deduplication running: rerun detected.'; java -cp ${project.build.outputDirectory} org.dvsa.testing.framework.parallel.DeduplicateJUnit; else echo 'Deduplication skipped: No rerun detected.'; fi"/>
+                                </exec>
+
+                                <!-- Clean up rerun.txt after deduplication -->
+                                <exec executable="sh">
+                                    <arg value="-c"/>
+                                    <arg value="rm -f ${project.build.directory}/rerun.txt"/>
                                 </exec>
                             </target>
                         </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
