--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,12 @@
         <jvmMemory>4000</jvmMemory>
 
         <!-- DVSA Internal Libraries -->
-        <active-support.version>2.11.1</active-support.version>
-        <api-calls.version>3.2.1</api-calls.version>
+        <active-support.version>2.11.2</active-support.version>
+        <api-calls.version>3.2.2</api-calls.version>
         <uri-constructor.version>2.3.0</uri-constructor.version>
-        <axe-scanner.version>2.11.0</axe-scanner.version>
+        <axe-scanner.version>2.11.2</axe-scanner.version>
 
-        <!-- Testing Framework - Cucumber & JUnit -->
+        <!-- Testing Framework - Cucumber & JUnmvn clean install -DskipTestsit -->
         <cucumber.version>7.20.1</cucumber.version>
         <junit.version>5.11.4</junit.version>
         <junit4.version>4.13.2</junit4.version>
@@ -85,6 +85,11 @@
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-codec-http</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-common</artifactId>
                 <version>${netty.version}</version>
             </dependency>
         </dependencies>
